[gd_scene load_steps=4 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.90936, 8.06208 )

[node name="Bullet" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 1 )
speed = 750
lifetime = 1.0

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LifeTime" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
